--- a/public/css/app.css
+++ b/public/css/app.css
@@ -395,7 +395,7 @@ h6,
   line-height: 1.2;
   color: inherit;
 }
-
+/*
 h1,
 .h1 {
   font-size: 2.25rem;
@@ -425,6 +425,7 @@ h6,
 .h6 {
   font-size: 0.9rem;
 }
+*/
 
 .lead {
   font-size: 1.125rem;
